# TradingCat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOFF.md  PLAN.json  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  handoff-frontend-refactor.md  handoff-real-data-pipeline.md  handoff-refactor.md  init.sh  pyproject.toml
.codex/: config.toml
.handoff/: index.md  round-01-akshare-adapter.md  round-02-factory-composite.md  round-03-baostock-adapter.md  round-04-tushare-adapter.md  round-05-eastmoney-news.md  round-06-news-sources.md  round-07-news-filter.md  round-08-cn-risk-rules.md  round-09-technical-features.md  round-10-universe-screener.md  round-11-llm-budget.md  round-12-llm-provider.md  round-13-research-analysts.md  round-14-report-export.md  round-15-llm-cache-batch.md
.harness/: build-round-3.md  build-round-4.md  qa-round-3.md  qa-round-4.md  spec.md  status.json
docs/: 2026-03-29-harness-review-report.md  2026-03-31-harness-review-report.md  ABSORB_CAPABILITIES.md  codex-harness-engineering.md  opend_runbook.md
scripts/: absorb_dogfood.py  bootstrap_data.py  bootstrap_env.sh  checklist.sh  cleanup_reports.sh  compare_reports.sh  doctor.sh  init_postgres.sh  insight_replay.py  latest_report.sh  opend_check.sh  post_validate.sh  report_markdown.sh  reports.sh  run_local.sh  simulated_order_cycle.sh  stage_a_fault_injection.py  validate_all.sh  validate_broker.sh
static/: account.js  api.js  common.js  components.js  dashboard.css  dashboard.js  dashboard_accounts.js  dashboard_insights.js  dashboard_operations.js  (+7 more)
(+260 files in other folders)
