[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingcat"
version = "0.1.0"
description = "TradingCat V1 baseline implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "duckdb>=1.1,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]
futu = [
  "futu-api>=9.4; platform_system != 'Linux' or platform_machine != 'x86_64'",
]
sentiment_akshare = [
  "akshare>=1.13,<2.0",
]
sentiment_baostock = [
  "baostock>=0.8,<1.0",
]
sentiment_tushare = [
  "tushare>=1.4,<2.0",
]
sentiment_eastmoney = [
  "curl_cffi>=0.7,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["tradingcat"]
